Adds reference to Kleene's theorem and formal definition of homogenization

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -78,3 +78,9 @@
   journal   = {Russian Mathematical Surveys},
   abstract  = {CONTENTS Introduction  § 1. Homomorphism and equivalence of automata  § 2. Introduction of mappings in automata  § 3. Introduction of events in finite automata, operations on events  § 4. Automata and semi-groups  § 5. The composition of automata  § 6. Experiments with automata Conclusion References}
 }
+
+@inproceedings{Kleene1951RepresentationOE,
+  title  = {Representation of Events in Nerve Nets and Finite Automata},
+  author = {Stephen Cole Kleene},
+  year   = {1951}
+}
