--- a/doc/automata.tex
+++ b/doc/automata.tex
@@ -360,6 +360,34 @@ Elle peut être définie simplement comme ceci~:
     accept(M, w) = (\bigcup_{p \in I} \delta(p, w)) \cap F \neq \varnothing
 \end{align*}
 
+Une autre fonction sur les automates est \(homogenized\) qui renvoie l'automate
+homogène qui reconnait le même langage que l'automate donné. Elle a ainsi comme
+signature~:
+
+\[
+    homogenized: AFN(\Sigma, \eta) \to AFN(\Sigma, (\Sigma \cup \{\varepsilon\} \times \eta))
+\]
+
+Elle peut être définie de cette façon~:
+
+\begin{gather*}
+    homogenized(M) = N \quad \text{avec}                                                          \\
+    \forall (p, q) \in Q^2, \exists a \in \Sigma ~|~ p \in \delta(q, a) \Rightarrow (a, p) \in Q' \\
+    \forall (p, q) \in Q^2, \forall a \in \Sigma ~|~ p \notin \delta(q, a)
+    \Rightarrow (\varepsilon, p) \in Q' \\
+    \forall p \in I, \forall a \in \Sigma \cup \{\varepsilon\} ~|~ (a, p) \in Q' \Rightarrow (a, p) \in I' \\
+    \forall p \in F, \forall a \in \Sigma \cup \{\varepsilon\} ~|~ (a, p) \in Q' \Rightarrow (a, p) \in F' \\
+    \forall (p, q) \in Q, \exists a \in \Sigma, \forall b \in \Sigma \cup \{\varepsilon\} ~|~ (b, q) \in Q', p \in \delta(q, a) \Rightarrow (p, a) \in \delta'((b, q), a) \\
+    M = (Q, I, F, \delta) \in AFN(\Sigma, \eta) \\
+    N = (Q', I', F', \delta') \in AFN(\Sigma, (\Sigma \cup \{\varepsilon\}
+    \times \eta))
+\end{gather*}
+
+On remarque bien que par construction l'automate résultant est homogène, parce
+que les états sont devenus un couple entre leur valeur et leur transition
+entrante. Ce qui fait que toutes les transitions vers l'état \((a, p)\) ont
+tous pour valeur \(a\).
+
 \subsection{Conclusion}
 
 Comme nous venons de voir, les automates sont des outils pour reconnaitre des
@@ -369,5 +397,9 @@ que cet objet est très intéressant dans le monde de l'informatique. En
 revanche, l'un de ses points faibles est que pour nous humain, il est difficile
 de représenter un automate autrement que par une représentation graphique.
 Contrairement aux expressions régulières. Il serait alors intéressant de
-pouvoir convertir une expression régulière en automate. C'est ce que nous
-allons voir dans la prochaine section.
+pouvoir convertir une expression régulière en automate. On pourrait se poser la
+question \og{}est-ce-que c'est toujours possible de convertir une expression
+régulière en automate\fg{}, la réponse est oui, car selon le théorème de
+Kleene~\cite{Kleene1951RepresentationOE}, toute expression régulière peut être
+représentée par un automate fini. Nous allons voir un algorithme pour faire
+cette conversion dans la prochaine section.
